--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "jquery": "~2.1.1",
     "modernizr": "~2.8.1",
-    "materialize": "^0.98.2"
+    "materialize": "^0.98.2",
+    "waypoints": "^4.0.1"
   }
 }
