--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,6 @@
     "jquery": "~2.1.1",
     "modernizr": "~2.8.1",
     "materialize": "^0.98.2",
-    "waypoints": "^4.0.1",
-    "jquery-mobile-bower": "^1.4.5"
+    "waypoints": "^4.0.1"
   }
 }
